2009-01-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_DeleteCommandFromToken):	Reverted 
	most of the substance of my 2009-01-12 commit.  NULLing the objProc
	field of a Command when deleting it is important so that tests for
	certain classes of commands don't return false positives when applied
	to deleted command tokens.  Overall change is now just replacement
	of a false comment with a true one.

2009-01-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4: fix [tcl-Bug 2502365] Building of head on
	  HPUX is broken when using the native CC
	* unix/configure (autoconf-2.59)

2009-01-13  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (Tcl_ThrowObjCmd):	Move implementation of [throw]
	* library/init.tcl (throw):		to C from Tcl.

2009-01-12  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_DeleteCommandFromToken): One consequence of
	the NRE rewrite is that there are now situations where a NULL objProc
	field in a Command struct is perfectly normal.  Removed an outdated
	comment in Tcl_DeleteCommandFromToken that claimed we use
	cmdPtr->objPtr==NULL as a test of command validity. In fact we use
	cmdPtr->flags&CMD_IS_DELETED to perform that test. Also removed the
	setting to NULL, since any extension following the advice of the old
	comment is going to be broken by NRE anyway, and needs to shift to
	flag-based testing (or stop intruding into such internal matters).
	Part of [Bug 2486550].

2009-01-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c (STRING_SIZE): Corrected failure to limit
	memory allocation requests to the sizes that can be supported by Tcl's
	memory allocation routines. [Bug 2494093]

2009-01-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclNamesp.c (NamespaceEnsembleCmd): Error out when someone
	gives wrong # of args to [namespace ensemble create]. [Bug 1558654]

2009-01-08  Don Porter  <dgp@users.sourceforge.net>
